[gd_scene load_steps=5 format=3 uid="uid://ftl8f5x5g86g"]

[ext_resource type="Texture2D" uid="uid://b7wbeh1h4hvir" path="res://Sprites/tnytanxUI_sprites.png" id="1_dxtgh"]
[ext_resource type="Texture2D" uid="uid://dkgfg8q0h7rph" path="res://Sprites/tnytanxUI.png" id="1_ohrjl"]
[ext_resource type="Script" uid="uid://bho7albwng17r" path="res://Scenes/player_ui.gd" id="1_qipxh"]
[ext_resource type="Script" uid="uid://donbivsbw8rx" path="res://Scripts/paper_target.gd" id="4_46yqn"]

[node name="PLAYER_UI" type="Control"]
layout_mode = 3
anchor_left = -0.22200002
anchor_top = -0.35200003
anchor_right = 0.22200002
anchor_bottom = 0.43800002
offset_left = 255.74402
offset_top = 228.09602
offset_right = -255.74402
offset_bottom = -283.824
script = ExtResource("1_qipxh")

[node name="TnytanxUiSprites" type="Sprite2D" parent="."]
visible = false
position = Vector2(-64.583984, -151.656)
scale = Vector2(2, 2)
texture = ExtResource("1_dxtgh")

[node name="UI_frame_bottom" type="Sprite2D" parent="."]
position = Vector2(0.41601563, 28.343994)
scale = Vector2(2, 2)
texture = ExtResource("1_ohrjl")
offset = Vector2(0, 39)
region_enabled = true
region_rect = Rect2(0, 78, 320, 242)

[node name="frame_top" type="Sprite2D" parent="UI_frame_bottom"]
position = Vector2(0, -132)
texture = ExtResource("1_ohrjl")
region_enabled = true
region_rect = Rect2(0, 0, 320, 136)

[node name="paper_target" type="Node2D" parent="UI_frame_bottom"]
position = Vector2(126, 102.5)
script = ExtResource("4_46yqn")

[node name="paper_target_bg" type="Sprite2D" parent="UI_frame_bottom/paper_target"]
modulate = Color(0.10971219, 0.10971219, 0.109712176, 1)
texture = ExtResource("1_dxtgh")
region_enabled = true
region_rect = Rect2(263, 242, 46, 43)

[node name="paper_target_cockpit" type="Sprite2D" parent="UI_frame_bottom/paper_target"]
modulate = Color(0.49019608, 1, 0.4, 1)
position = Vector2(0, 3)
texture = ExtResource("1_dxtgh")
region_enabled = true
region_rect = Rect2(279, 260, 14, 13)

[node name="paper_target_core_L" type="Sprite2D" parent="UI_frame_bottom/paper_target"]
modulate = Color(0.49019608, 1, 0.4, 1)
position = Vector2(-11.5, 2.5)
texture = ExtResource("1_dxtgh")
region_enabled = true
region_rect = Rect2(271, 260, 7, 12)

[node name="paper_target_core_R" type="Sprite2D" parent="UI_frame_bottom/paper_target"]
modulate = Color(0.49019608, 1, 0.4, 1)
position = Vector2(11.5, 2.5)
texture = ExtResource("1_dxtgh")
region_enabled = true
region_rect = Rect2(294, 260, 7, 12)

[node name="paper_target_weapon_R1" type="Sprite2D" parent="UI_frame_bottom/paper_target"]
modulate = Color(0.49019608, 1, 0.4, 1)
position = Vector2(19.5, 10)
texture = ExtResource("1_dxtgh")
region_enabled = true
region_rect = Rect2(302, 267, 7, 13)

[node name="paper_target_weapon_R2" type="Sprite2D" parent="UI_frame_bottom/paper_target"]
modulate = Color(0.49019608, 1, 0.4, 1)
position = Vector2(19.5, -4)
texture = ExtResource("1_dxtgh")
region_enabled = true
region_rect = Rect2(302, 253, 7, 13)

[node name="paper_target_weapon_R3" type="Sprite2D" parent="UI_frame_bottom/paper_target"]
modulate = Color(0.49019608, 1, 0.4, 1)
position = Vector2(-19.5, 10)
texture = ExtResource("1_dxtgh")
region_enabled = true
region_rect = Rect2(263, 267, 7, 13)

[node name="paper_target_weapon_R4" type="Sprite2D" parent="UI_frame_bottom/paper_target"]
modulate = Color(0.49019608, 1, 0.4, 1)
position = Vector2(-19.5, -4)
texture = ExtResource("1_dxtgh")
region_enabled = true
region_rect = Rect2(263, 253, 7, 13)

[node name="paper_target_front_tread_L" type="Sprite2D" parent="UI_frame_bottom/paper_target"]
modulate = Color(0.49019608, 1, 0.4, 1)
position = Vector2(-11.5, -12)
texture = ExtResource("1_dxtgh")
region_enabled = true
region_rect = Rect2(271, 243, 7, 17)

[node name="paper_target_rear_tread_L" type="Sprite2D" parent="UI_frame_bottom/paper_target"]
modulate = Color(0.49019608, 1, 0.4, 1)
position = Vector2(-11.5, 14.5)
texture = ExtResource("1_dxtgh")
region_enabled = true
region_rect = Rect2(271, 272, 7, 12)

[node name="paper_target_front_tread_R" type="Sprite2D" parent="UI_frame_bottom/paper_target"]
modulate = Color(0.49019608, 1, 0.4, 1)
position = Vector2(11.5, -12)
texture = ExtResource("1_dxtgh")
region_enabled = true
region_rect = Rect2(294, 243, 7, 17)

[node name="paper_target_rear_tread_R" type="Sprite2D" parent="UI_frame_bottom/paper_target"]
modulate = Color(0.49019608, 1, 0.4, 1)
position = Vector2(11.5, 14.5)
texture = ExtResource("1_dxtgh")
region_enabled = true
region_rect = Rect2(294, 272, 7, 12)

[node name="paper_target_core_rear" type="Sprite2D" parent="UI_frame_bottom/paper_target"]
modulate = Color(0.49019608, 1, 0.4, 1)
position = Vector2(0, 14)
texture = ExtResource("1_dxtgh")
region_enabled = true
region_rect = Rect2(278, 274, 16, 7)

[node name="paper_target_core_front" type="Sprite2D" parent="UI_frame_bottom/paper_target"]
modulate = Color(0.49019608, 1, 0.4, 1)
position = Vector2(0, -11)
texture = ExtResource("1_dxtgh")
region_enabled = true
region_rect = Rect2(278, 246, 16, 13)

[node name="Overheat" type="Control" parent="UI_frame_bottom"]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = -80.0
offset_top = 139.0
offset_right = -71.0
offset_bottom = 199.0
rotation = 3.1415927

[node name="Heat_Bar" type="Sprite2D" parent="UI_frame_bottom/Overheat"]
position = Vector2(4.5, 30)
rotation = 3.1415927
texture = ExtResource("1_dxtgh")
region_enabled = true
region_rect = Rect2(72, 240, 7, 58)

[node name="Total_health" type="Control" parent="UI_frame_bottom"]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = 103.18713
offset_top = 127.5
offset_right = 106.18713
offset_bottom = 172.5
rotation = 4.712389

[node name="health_bar" type="Sprite2D" parent="UI_frame_bottom/Total_health"]
position = Vector2(1.5425282, 22.524305)
rotation = 3.1415927
scale = Vector2(1.0286106, 15.012549)
texture = ExtResource("1_dxtgh")
region_enabled = true
region_rect = Rect2(263, 290, 3, 3)

[node name="Laser" type="Sprite2D" parent="UI_frame_bottom"]
position = Vector2(-70, 85)
texture = ExtResource("1_dxtgh")
region_enabled = true
region_rect = Rect2(136, 238, 12, 12)

[node name="Weapon_cooldown_r1" type="Control" parent="UI_frame_bottom/Laser"]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = 10.0
offset_top = -1.5
offset_right = 15.051872
offset_bottom = 29.440636
rotation = 4.712389

[node name="cooldown_bar" type="Sprite2D" parent="UI_frame_bottom/Laser/Weapon_cooldown_r1"]
position = Vector2(2.4661927, 15.253706)
rotation = 4.712389
scale = Vector2(1, 1.175)
texture = ExtResource("1_dxtgh")
region_enabled = true
region_rect = Rect2(101, 256, 29, 3)

[node name="MachineGun" type="Sprite2D" parent="UI_frame_bottom"]
position = Vector2(-70, 101)
texture = ExtResource("1_dxtgh")
region_enabled = true
region_rect = Rect2(136, 254, 12, 12)

[node name="Weapon_cooldown_r2" type="Control" parent="UI_frame_bottom/MachineGun"]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = 9.5
offset_top = -1.5
offset_right = 14.551872
offset_bottom = 29.440643
rotation = 4.712389

[node name="cooldown_bar" type="Sprite2D" parent="UI_frame_bottom/MachineGun/Weapon_cooldown_r2"]
position = Vector2(2.4661927, 15.253706)
rotation = 4.712389
scale = Vector2(1, 1.175)
texture = ExtResource("1_dxtgh")
region_enabled = true
region_rect = Rect2(101, 256, 29, 3)

[node name="Cannon" type="Sprite2D" parent="UI_frame_bottom"]
position = Vector2(-71, 118)
texture = ExtResource("1_dxtgh")
region_enabled = true
region_rect = Rect2(136, 272, 10, 10)

[node name="Weapon_cooldown_r3" type="Control" parent="UI_frame_bottom/Cannon"]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = 11.0
offset_top = -2.5
offset_right = 16.051872
offset_bottom = 28.440643
rotation = 4.712389

[node name="cooldown_bar" type="Sprite2D" parent="UI_frame_bottom/Cannon/Weapon_cooldown_r3"]
position = Vector2(2.4661927, 15.253706)
rotation = 4.712389
scale = Vector2(1, 1.175)
texture = ExtResource("1_dxtgh")
region_enabled = true
region_rect = Rect2(101, 256, 29, 3)

[node name="rockets" type="Sprite2D" parent="UI_frame_bottom"]
position = Vector2(-70, 133)
texture = ExtResource("1_dxtgh")
region_enabled = true
region_rect = Rect2(136, 286, 12, 12)

[node name="Weapon_cooldown_r4" type="Control" parent="UI_frame_bottom/rockets"]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = 9.5
offset_top = -1.0
offset_right = 14.551872
offset_bottom = 29.940643
rotation = 4.712389

[node name="cooldown_bar" type="Sprite2D" parent="UI_frame_bottom/rockets/Weapon_cooldown_r4"]
position = Vector2(2.4661927, 15.253706)
rotation = 4.712389
scale = Vector2(1, 1.175)
texture = ExtResource("1_dxtgh")
region_enabled = true
region_rect = Rect2(101, 256, 29, 3)

[node name="Total_armor" type="Control" parent="UI_frame_bottom"]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = 103.0
offset_top = 132.5
offset_right = 106.0
offset_bottom = 177.5
rotation = 4.712389

[node name="armor_bar" type="Sprite2D" parent="UI_frame_bottom/Total_armor"]
position = Vector2(1.5425282, 22.524305)
rotation = 3.1415927
scale = Vector2(1.0286106, 15.012549)
texture = ExtResource("1_dxtgh")
region_enabled = true
region_rect = Rect2(263, 285, 3, 3)
